testsuite/tests/saks/should_fail/T20916.stderr

T20916.hs:8:10: error:
    • Different names for the same type variable: ‘p’ and ‘q’
    • In the data type declaration for ‘T3’
